<resources>
    <string name="app_name">LEMS Mobile Proctor Agent</string>
    <string name="filter_view_lems">Filter view lems schema</string>
    <string name="btn_take_qrcode">Take picture of QR Code</string>
    <string name="btn_connect_retry">Retry connection</string>
    <string name="error_link_required">Please open this app using a proper QRCode.</string>
    <string name="error_permission_required">Permission required to continue. Please restart app.</string>
    <string name="error_connection">Error connecting the server.</string>
    <string name="error_taking_pictures">Error taking pictures.</string>
    <string name="txt_endpoint_connection">Connection to proctoring system…</string>
    <string name="txt_taking_pictures">Taking pictures…</string>
    <string name="ic_starting_desc">LEMS Setup</string>
    <string name="ic_connecting_desc">Connecting to </string>
    <string name="ic_connected_desc">Connected to </string>
    <string name="ic_taking_picture_desc">Taking pictures…</string>
    <string name="ic_controlled_desc">Controlled…</string>
    <string name="ic_error_desc">Error</string>
    <string name="btinfo_prefix">Bluetooth device: %s</string>
    <string name="btn_skip_bt">Skip bluetooth controller pairing</string>
    <string name="btn_select_bt_controller">Select Bluetooth controller</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="btn_connect">Connect</string>
    <string name="unknown_device">Unknown device</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>